--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.31.0",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "framer-motion": "^11.11.9",
     "gulp": "^5.0.0",
     "gulp-eslint-new": "^2.3.0",
     "gulp-nodemon": "^2.5.0",
@@ -41,6 +42,7 @@
     "sass": "^1.80.3",
     "serve-favicon": "^2.5.0",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-stream": "^7.0.0"
   }
 }
