--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portfolio",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "20.18.0"
+  },
   "scripts": {
     "webpack": "webpack",
     "nodemon": "nodemon -e js,html,css --watch ./hosted --watch ./server ./server/app.js ",
