--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "homepage": "https://github.com/Le-Vincent56/Portfolio-React#readme",
   "description": "",
   "dependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.2.1",
+    "body-parser": "^1.20.3",
     "compression": "^1.7.4",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
