--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "webpack": "webpack",
-    "nodemon": "nodemon -e js,html,css --watch ./hosted --watch ./server ./server/app.js ",
+    "nodemon": "gulp build && nodemon -e js,html,css --watch ./hosted --watch ./server ./server/app.js ",
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
     "test": "echo \"Tests complete\"",
